New page and improvements

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -36,7 +36,7 @@
 }
 .waves {
   width: 100%;
-  background-image: url(../images/waves.svg);
+  background-image: url(../images/background/waves.svg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100px;
