Improvements and corrections.

--- a/assets/css/members.css
+++ b/assets/css/members.css
@@ -45,7 +45,7 @@ main{
     user-select: none;
     display: inline-flex;
     gap: 10px;
-    background-color: #F3F3FF;
+    background-color: #e4e4ff;
     box-shadow: 0 20px 40px #d7cff036;
     padding: 8px 14px;
     border-radius: 10px;
