--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -95,12 +95,14 @@ article b{
 }
 article .media{
     width: 100%;
-    max-width: 700px;
+    max-width: 850px;
     margin: 40px auto;
     overflow: hidden;
 }
 article .media video, article .media img{
     width: 100%;
+    max-height: 400px;
+    object-fit: cover;
     border-radius: 10px;
     display: block;
 }
