--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -113,7 +113,7 @@ main .sticky-bar{
   top: 5px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.099);
   border-radius: 10px;
-  padding: 25px 35px;
+  padding: 45px 35px;
   text-align: center;
   height: max-content;
   background-color: rgb(47, 44, 220);
@@ -123,25 +123,35 @@ main .sticky-bar h2{
   font-weight: 800;
   font-size: 1.3rem;
   color: rgb(248, 248, 248);
-  margin-bottom: 15px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 main .sticky-bar p{
   color: rgb(245,245,245);
   font-weight: 300;
   font-size: .95rem;
   line-height: 1.45;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+
+  text-align: justify;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 main .sticky-bar a{
   display: inline-flex;
-  align-items: center;
   gap: 10px;
-  color: white;
-  user-select: none;
-  background-color: rgb(69, 67, 245);
+  align-items: center;
+
+  color: rgb(66, 66, 255);
+  background-color: rgb(240, 240, 255);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.177);
-  font-weight: 300;
-  padding: 7px 10px;
+
+  -webkit-user-select: none;
+  user-select: none;
+  font-weight: 200;
+
+  padding: 9px 14px;
+  line-height: 1;
   border-radius: 8px;
   transition: transform .3s ease;
 }
@@ -150,6 +160,9 @@ main .sticky-bar a i{
 }
 main .sticky-bar a:hover{
   transform: translateY(-2px);
+}
+main .sticky-bar a:active{
+  transform: translateY(2px);
 }
 
 
