--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
 
 ::-webkit-scrollbar {
   width: 12px;
+  background-color: white;
 }
 ::-webkit-scrollbar-thumb {
   background-color: rgb(40, 36, 213);
