--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -208,14 +208,14 @@ main .final .author img{
     display: block;
 }
 main .final .text h2{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: rgb(40, 36, 213);
-    font-weight: 700;
+    font-weight: 800;
 }
 main .final .text p{
-    font-size: 1rem;
+    font-size: .95rem;
     margin-top: 6px;
-    font-weight: 200;
+    font-weight: 300;
 }
 main .final .text .links{
     display: flex;
@@ -223,10 +223,42 @@ main .final .text .links{
     margin-top: 14px;
 }
 main .final .text .links a{
-    color: rgb(40, 36, 213);
-    font-size: 1.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 32px;
+    background-color: rgb(40, 36, 213);
+    width: 32px;
+    border-radius: 100%;
+    color: #fff;
+    font-size: 1rem;
 }
 
+main .tags{
+    -webkit-user-select: none;
+    user-select: none;
+    width: 100%;
+    max-width: 850px;
+    margin: 50px auto 0;
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+main .tags span{
+    cursor: pointer;
+    padding: 6px 12px;
+    font-size: .85rem;
+    font-weight: 400;
+    color: rgb(40, 36, 213);
+    border: 1px solid rgb(40, 36, 213);
+    border-radius: 50px;
+    transition: background-color .2s ease, color .2s ease;
+}
+main .tags span:hover{
+    background-color: rgb(40, 36, 213);
+    color: #fff;
+}
 
 @media(max-width: 820px){
     .seealso{
@@ -272,6 +304,6 @@ main .final .text .links a{
         justify-content: center;
     }
     main .final .text .links a{
-        font-size: 1.6rem;
+        font-size: 1rem;
     }
 }
