--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -142,14 +142,15 @@ main .sticky-bar a{
   gap: 10px;
   align-items: center;
 
-  color: rgb(66, 66, 255);
+  color: rgb(0, 0, 0);
   background-color: rgb(240, 240, 255);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.177);
 
   -webkit-user-select: none;
   user-select: none;
-  font-weight: 200;
-
+  font-weight: 300;
+  font-size: .95rem;
+  
   padding: 9px 14px;
   line-height: 1;
   border-radius: 8px;
