--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   text-decoration: none;
   outline: none;
+  font-family: 'Outfit', sans-serif;
   list-style: none;
   -webkit-tap-highlight-color: transparent;
 }
