--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -128,6 +128,7 @@ article code{
     color: rgb(32, 32, 32);
 }
 article ul.special li a{
+    display: block;
     border-radius: 4px;
     font-weight: 300;
     border: 1px solid rgb(40, 36, 213);
